--- a/sampleproject/Packages/manifest.json
+++ b/sampleproject/Packages/manifest.json
@@ -2,12 +2,14 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.animation": "0.6.0-preview.2",
     "com.unity.entities": "0.14.0-preview.18",
     "com.unity.ide.rider": "2.0.5",
     "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.netcode": "0.3.0-preview.3",
     "com.unity.physics": "0.4.1-preview",
+    "com.unity.probuilder": "4.2.3",
     "com.unity.rendering.hybrid": "0.8.0-preview.18",
     "com.unity.test-framework": "1.1.16",
     "com.unity.transport": "0.4.0-preview.3",
