implemented a density solver based heavily on position-based-fluids. seems to work well but probably need to dampen the affect of path-finding for objects that are experiencing high density

--- a/sampleproject/Assets/Samples/Steve/Scripts/Steve.asmdef
+++ b/sampleproject/Assets/Samples/Steve/Scripts/Steve.asmdef
@@ -4,12 +4,12 @@
         "Unity.Burst",
         "Unity.Entities",
         "Unity.Transforms",
-        "Unity.Collections",
         "Unity.Mathematics",
         "Unity.Networking.Transport",
         "Unity.NetCode",
         "Unity.Physics",
-        "Unity.Rendering.Hybrid"
+        "Unity.Rendering.Hybrid",
+        "Unity.Collections"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
