--- a/sampleproject/Packages/manifest.json
+++ b/sampleproject/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.collections": "0.12.0-preview.13",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.animation": "0.6.0-preview.2",
